ECO Converter problems post

--- a/categories.html
+++ b/categories.html
@@ -14,11 +14,13 @@
         <header id="banner" class="body">
                 <h1><a href="/">NILMTK Blog Update </a></h1>
                 <nav><ul>
+                    <li><a href="/category/ecoconverter.html">ECOConverter</a></li>
                     <li><a href="/category/general.html">General</a></li>
                     <li><a href="/category/python-for-data-analysis.html">Python for Data Analysis</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
+    <li><a href="/category/ecoconverter.html">ECOConverter</a></li>
     <li><a href="/category/general.html">General</a></li>
     <li><a href="/category/python-for-data-analysis.html">Python for Data Analysis</a></li>
 </ul>
