--- a/tags.html
+++ b/tags.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">NILMTK Blog Update </a></h1>
                 <nav><ul>
+                    <li><a href="/category/ecoconverter.html">ECOConverter</a></li>
                     <li><a href="/category/general.html">General</a></li>
                     <li><a href="/category/python-for-data-analysis.html">Python for Data Analysis</a></li>
                 </ul></nav>
@@ -22,14 +23,20 @@
 <section id="content" class="body">
     <h1>Tags for NILMTK Blog Update</h1>
     <ul>
+        <li><a href="/tag/converter.html">converter</a> (1)</li>
         <li><a href="/tag/data-analysis.html">data analysis</a> (2)</li>
         <li><a href="/tag/datatime.html">Datatime</a> (1)</li>
+        <li><a href="/tag/eco.html">eco</a> (1)</li>
+        <li><a href="/tag/hdf5.html">hdf5</a> (1)</li>
         <li><a href="/tag/hello.html">hello</a> (1)</li>
         <li><a href="/tag/introduction.html">introduction</a> (1)</li>
         <li><a href="/tag/ipython.html">ipython</a> (4)</li>
         <li><a href="/tag/iris.html">iris</a> (1)</li>
         <li><a href="/tag/load-monitoring.html">load monitoring</a> (1)</li>
         <li><a href="/tag/matplotlib.html">matplotlib</a> (2)</li>
+        <li><a href="/tag/memory.html">memory</a> (1)</li>
+        <li><a href="/tag/metadata.html">metadata</a> (1)</li>
+        <li><a href="/tag/nilmtk.html">nilmtk</a> (1)</li>
         <li><a href="/tag/notebook.html">notebook</a> (2)</li>
         <li><a href="/tag/numpy.html">numpy</a> (1)</li>
         <li><a href="/tag/pandas.html">pandas</a> (2)</li>
