--- a/archives.html
+++ b/archives.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">NILMTK Blog Update </a></h1>
                 <nav><ul>
+                    <li><a href="/category/ecoconverter.html">ECOConverter</a></li>
                     <li><a href="/category/general.html">General</a></li>
                     <li><a href="/category/python-for-data-analysis.html">Python for Data Analysis</a></li>
                 </ul></nav>
@@ -22,6 +23,8 @@
 <h1>Archives for NILMTK Blog Update</h1>
 
 <dl>
+    <dt>Mon 20 October 2014</dt>
+    <dd><a href="/problems-eco-converter.html">Problems with the ECO Converter</a></dd>
     <dt>Wed 24 September 2014</dt>
     <dd><a href="/chap8-time-series.html">Chapter 10 - Time Series</a></dd>
     <dt>Tue 23 September 2014</dt>
