--- a/authors.html
+++ b/authors.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">NILMTK Blog Update </a></h1>
                 <nav><ul>
+                    <li><a href="/category/ecoconverter.html">ECOConverter</a></li>
                     <li><a href="/category/general.html">General</a></li>
                     <li><a href="/category/python-for-data-analysis.html">Python for Data Analysis</a></li>
                 </ul></nav>
@@ -22,8 +23,8 @@
 <section id="content" class="body">
     <h1>Authors on NILMTK Blog Update</h1>
     <ul>
-        <li><a href="/author/mridul.html">Mridul</a> (1)</li>
-        <li><a href="/author/mridul-malpotra.html">Mridul Malpotra</a> (4)</li>
+        <li><a href="/author/mridul.html">Mridul</a> (5)</li>
+        <li><a href="/author/mridul-malpotra.html">Mridul Malpotra</a> (1)</li>
     </ul>
 </section>
 
