--- a/hello-world.html
+++ b/hello-world.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">NILMTK Blog Update </a></h1>
                 <nav><ul>
+                    <li><a href="/category/ecoconverter.html">ECOConverter</a></li>
                     <li class="active"><a href="/category/general.html">General</a></li>
                     <li><a href="/category/python-for-data-analysis.html">Python for Data Analysis</a></li>
                 </ul></nav>
