Completed ECO Converter - how it fared

--- a/archives.html
+++ b/archives.html
@@ -23,6 +23,8 @@
 <h1>Archives for NILMTK Blog Update</h1>
 
 <dl>
+    <dt>Wed 29 October 2014</dt>
+    <dd><a href="/eco-converter-fared.html">ECO Converter - How it fared</a></dd>
     <dt>Mon 20 October 2014</dt>
     <dd><a href="/problems-eco-converter.html">Problems with the ECO Converter</a></dd>
     <dt>Wed 24 September 2014</dt>
