NILM Eval and ECO Dataset

--- a/authors.html
+++ b/authors.html
@@ -16,6 +16,7 @@
                 <nav><ul>
                     <li><a href="/category/ecoconverter.html">ECOConverter</a></li>
                     <li><a href="/category/general.html">General</a></li>
+                    <li><a href="/category/nilmtk-nilm-eval.html">NILMTK & NILM-Eval</a></li>
                     <li><a href="/category/python-for-data-analysis.html">Python for Data Analysis</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -24,7 +25,7 @@
     <h1>Authors on NILMTK Blog Update</h1>
     <ul>
         <li><a href="/author/mridul.html">Mridul</a> (5)</li>
-        <li><a href="/author/mridul-malpotra.html">Mridul Malpotra</a> (2)</li>
+        <li><a href="/author/mridul-malpotra.html">Mridul Malpotra</a> (3)</li>
     </ul>
 </section>
 
