--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,7 @@
                 <nav><ul>
                     <li><a href="/category/ecoconverter.html">ECOConverter</a></li>
                     <li><a href="/category/general.html">General</a></li>
+                    <li><a href="/category/nilmtk-nilm-eval.html">NILMTK & NILM-Eval</a></li>
                     <li><a href="/category/python-for-data-analysis.html">Python for Data Analysis</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -23,6 +24,8 @@
 <h1>Archives for NILMTK Blog Update</h1>
 
 <dl>
+    <dt>Wed 26 November 2014</dt>
+    <dd><a href="/nilm-eval-and-eco-dataset.html">A summary of NILM-Eval and the ECO Dataset</a></dd>
     <dt>Wed 29 October 2014</dt>
     <dd><a href="/eco-converter-fared.html">ECO Converter - How it fared</a></dd>
     <dt>Mon 20 October 2014</dt>
