--- a/categories.html
+++ b/categories.html
@@ -16,12 +16,14 @@
                 <nav><ul>
                     <li><a href="/category/ecoconverter.html">ECOConverter</a></li>
                     <li><a href="/category/general.html">General</a></li>
+                    <li><a href="/category/nilmtk-nilm-eval.html">NILMTK & NILM-Eval</a></li>
                     <li><a href="/category/python-for-data-analysis.html">Python for Data Analysis</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
     <li><a href="/category/ecoconverter.html">ECOConverter</a></li>
     <li><a href="/category/general.html">General</a></li>
+    <li><a href="/category/nilmtk-nilm-eval.html">NILMTK & NILM-Eval</a></li>
     <li><a href="/category/python-for-data-analysis.html">Python for Data Analysis</a></li>
 </ul>
         <section id="extras" class="body">
