--- a/tags.html
+++ b/tags.html
@@ -16,6 +16,7 @@
                 <nav><ul>
                     <li><a href="/category/ecoconverter.html">ECOConverter</a></li>
                     <li><a href="/category/general.html">General</a></li>
+                    <li><a href="/category/nilmtk-nilm-eval.html">NILMTK & NILM-Eval</a></li>
                     <li><a href="/category/python-for-data-analysis.html">Python for Data Analysis</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -23,23 +24,29 @@
 <section id="content" class="body">
     <h1>Tags for NILMTK Blog Update</h1>
     <ul>
+        <li><a href="/tag/algorithms.html">algorithms</a> (1)</li>
+        <li><a href="/tag/baranski.html">baranski</a> (1)</li>
         <li><a href="/tag/converter.html">converter</a> (2)</li>
         <li><a href="/tag/data-analysis.html">data analysis</a> (2)</li>
         <li><a href="/tag/datatime.html">Datatime</a> (1)</li>
-        <li><a href="/tag/eco.html">eco</a> (2)</li>
+        <li><a href="/tag/eco.html">eco</a> (3)</li>
         <li><a href="/tag/hdf5.html">hdf5</a> (2)</li>
         <li><a href="/tag/hello.html">hello</a> (1)</li>
         <li><a href="/tag/introduction.html">introduction</a> (1)</li>
         <li><a href="/tag/ipython.html">ipython</a> (4)</li>
         <li><a href="/tag/iris.html">iris</a> (1)</li>
+        <li><a href="/tag/kolter.html">kolter</a> (1)</li>
         <li><a href="/tag/load-monitoring.html">load monitoring</a> (1)</li>
         <li><a href="/tag/matplotlib.html">matplotlib</a> (2)</li>
         <li><a href="/tag/memory.html">memory</a> (2)</li>
         <li><a href="/tag/metadata.html">metadata</a> (2)</li>
+        <li><a href="/tag/nilm.html">nilm</a> (1)</li>
+        <li><a href="/tag/nilm-eval.html">nilm-eval</a> (1)</li>
         <li><a href="/tag/nilmtk.html">nilmtk</a> (2)</li>
         <li><a href="/tag/notebook.html">notebook</a> (2)</li>
         <li><a href="/tag/numpy.html">numpy</a> (1)</li>
         <li><a href="/tag/pandas.html">pandas</a> (2)</li>
+        <li><a href="/tag/parson.html">parson</a> (1)</li>
         <li><a href="/tag/plugins.html">plugins</a> (1)</li>
         <li><a href="/tag/power.html">power</a> (1)</li>
         <li><a href="/tag/power-consumption.html">power consumption</a> (1)</li>
@@ -49,6 +56,7 @@
         <li><a href="/tag/time-series.html">time series</a> (1)</li>
         <li><a href="/tag/uci.html">uci</a> (1)</li>
         <li><a href="/tag/visualization.html">visualization</a> (1)</li>
+        <li><a href="/tag/weiss.html">weiss</a> (1)</li>
         <li><a href="/tag/world.html">world</a> (1)</li>
     </ul>
 </section>
